# ReflectionsOS

./: .gitignore  ConvertFiles.command  README.md  ReflectionsOS.ino  Test Screen.graffle
CloudCity/: CloudCity.py  README.md  cloudcity.py  package.json  server.js
Devices/: Devices_Readme.md
Docs/: JCUSB using JTAG, CDC, USB for debugging  JCUSB using JTAG, CDC, USB for debugging.md  Keywords.txt  Operations Notes.md  Partition tables and optimizing memory in Arduino IDE.md  SD formating on ESP32S3 + SD:Nand + SPI + Fat.md  Scalable logger.md
Experiments/: Experiments_Readme.md  Strap Pin sizes.graffle
Gateway/: ESP32FileTransfer.ino  Gateway_Requirements.txt  ReflectionGatewayApp.apk
Instructables/: Instructables.ino  Reflections.h  tjpgdClass.cpp  tjpgdClass.h
ShowRunner/: MjpegClass.h  Reflections.h  ShowRunner.ino  tjpgdClass.h
TFT_TAR/: TAR.h  TFT_TAR.ino  tjpgdClass.cpp
libraries/: readme_libraries.md
libraries/arduino-libhelix-main/: .gitignore  CMakeLists.txt  Doxyfile  README.md  library.properties
libraries/arduino-libhelix-main/docs/html/: _a_a_c_decoder_helix_8h_source.html  _common_helix_8h_source.html  _helix_common_8h_source.html  _m_p3_decoder_helix_8h_source.html  annotated.html  class_a_a_c_decoder_helix-members.html  class_a_a_c_decoder_helix.html  class_common_helix-members.html  class_common_helix.html  class_m_p3_decoder_helix-members.html  class_m_p3_decoder_helix.html  classes.html  classlibhelix_1_1_a_a_c_decoder_helix-members.html  classlibhelix_1_1_a_a_c_decoder_helix.html  classlibhelix_1_1_common_helix-members.html  classlibhelix_1_1_common_helix.html  classlibhelix_1_1_m_p3_decoder_helix-members.html  classlibhelix_1_1_m_p3_decoder_helix.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  helix__log_8h_source.html  helix__pgm_8h_source.html  hierarchy.html  index.html  menudata.js  struct_range-members.html  struct_range.html  structlibhelix_1_1_range-members.html  structlibhelix_1_1_range.html
libraries/arduino-libhelix-main/docs/html/search/: all_0.js  all_3.js  all_6.js  all_8.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  pages_0.js  searchdata.js
libraries/arduino-libhelix-main/examples/output_aac/: CMakeLists.txt  desktop_aac.cpp  output_aac.ino
libraries/arduino-libhelix-main/examples/output_mp3/: CMakeLists.txt  desktop_mp3.cpp  output_mp3.ino
libraries/arduino-libhelix-main/src/: AACDecoderHelix.h  CommonHelix.h  MP3DecoderHelix.h  helix_log.h  helix_pgm.h
libraries/arduino-libhelix-main/src/libhelix-aac/: aaccommon.h  decelmnt.c  sbrqmf.c
libraries/arduino-libhelix-main/src/libhelix-mp3/: assembly.h
src/: Accelerometer.cpp  Accelerometer.h  Accellerometer.cpp  Accellerometer.h  AudioSampleAAC.h  BLE.cpp  (+60 more)
(+1442 files in other folders)
